--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "express-session": "^1.17.1",
     "graphql": "^15.1.0",
     "mongoose": "^5.9.19",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
