--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "graphql": "^15.1.0",
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
