--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
