--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
     "eslint": "^7.2.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "jest": "^26.1.0"
   },
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest"
+    "test": "jest --verbose --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
