Write unit tests for crypto functions in user controller

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest --watch --verbose --detectOpenHandles --coverage",
+    "test": "jest --verbose --detectOpenHandles --coverage",
     "sonar": "sonar-scanner"
   },
   "author": "",
