--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "csprng": "^0.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
     "express-session": "^1.17.1",
-    "graphql": "^15.1.0",
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
@@ -43,7 +41,7 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/tests/",
-      "auth/"
+      "/auth/"
     ]
   }
 }
