--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "eslint": "^6.6.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
-    "eslint": "^7.2.0",
     "eslint-config-google": "^0.14.0",
-    "jest": "^26.1.0",
+    "jest": "^24.9.0",
     "sonarqube-scanner": "^2.6.0"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "test": "jest  --coverage --runInBand --detectOpenHandles --forceExit",
     "sonar": "sonar-scanner"
   },
