--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.2.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csprng": "^0.1.2",
     "dotenv": "^8.2.0",
+    "eslint": "^6.6.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.19",
@@ -20,8 +22,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "supertest": "^4.0.2",
-    "eslint": "^6.6.0"
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
@@ -33,6 +34,7 @@
     "client": "npm start --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
+    "start-dev": "concurrently \"npm run server\" \"npm run client \"",
     "test": "jest  --coverage --runInBand --detectOpenHandles --forceExit",
     "sonar": "sonar-scanner"
   },
