--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "react-redux": "^7.2.0",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
